--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.11.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
